--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,18 @@
 
-/* 
+.seconds_card {
+    top: 30%;
+    border-radius: 10px;
+    border: 2px solid gray;
+    height: 200px;
+    width: 100px;
+    background-color: black;
+    color: white;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.seconds_unit {
+    font-size: 96px;
+    position: relative;
+    top: 20%;
+}
